--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Licence URI: https://www.os-templates.com/template-terms
   <div class="wrapper row0">
     <header id="header" class="hoc clear center">
       <!-- ################################################################################################ -->
-      <h1 id="logo"><i class="fas fa-truck-loading"></i> <a href="index.html">Shiphile</a></h1>
+      <img src="images\logos\Logo.png" style = "width:100px; height:125px;">
       <!-- ################################################################################################ -->
     </header>
   </div>
