--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@ Licence URI: https://www.os-templates.com/template-terms
           </ul>
         </li>
         <li><a href="pages/profile.html">Profile</a></li>
-        <li><a href="#">Link Text</a></li>
-        <li><a href="#">Link Text</a></li>
-        <li><a href="#">Long Link Text</a></li>
+        <li><a href="pages/standings.html">Standings</a></li>
       </ul>
       <!-- ################################################################################################ -->
     </nav>
