--- a/pages/profile.html
+++ b/pages/profile.html
@@ -156,6 +156,7 @@ Licence URI: https://www.os-templates.com/template-terms
           </li>
         </ul>
       </div>
+      <a href="birdcollection.html"><button class="btn">My Bird Collection</button></a>
       <!-- ################################################################################################ -->
     </div>
     <!-- ################################################################################################ -->
