--- a/pages/standings.html
+++ b/pages/standings.html
@@ -93,6 +93,7 @@ Licence URI: https://www.os-templates.com/template-terms
 <div class="promo scale">
   <div class="deal">
     <span>First Place</span>
+    <span></span>
   </div>
   <span class="price">Hassan Hosney</span>
   <ul class="features">
@@ -104,7 +105,8 @@ Licence URI: https://www.os-templates.com/template-terms
 </div>
 <div class="promo">
   <div class="deal">
-    <span>Third Place</span>
+    <span>Second Place</span>
+    <span></span>
   </div>
   <span class="price">Aya Tarek</span>
   <ul class="features">
