--- a/pages/thanks.html
+++ b/pages/thanks.html
@@ -25,7 +25,7 @@ Licence URI: https://www.os-templates.com/template-terms
   <div class="wrapper row0">
     <header id="header" class="hoc clear center">
       <!-- ################################################################################################ -->
-      <h1 id="logo"><i class="fas fa-truck-loading"></i> <a href="index.html">Shiphile</a></h1>
+      <h1 id="logo"><i class="fas fa-truck-loading"></i> <a href="../index.html">Shiphile</a></h1>
       <!-- ################################################################################################ -->
     </header>
   </div>
@@ -36,15 +36,15 @@ Licence URI: https://www.os-templates.com/template-terms
     <nav id="mainav" class="hoc clear">
       <!-- ################################################################################################ -->
       <ul class="clear">
-        <li class="drop"><a href="../index.html">Home</a></li>
-        <li><a class="drop" href="../pages/profile.html">Profile</a>
+        <li><a href="../index.html">Home</a></li>
+        <li><a class="drop" href="#">Profile</a>
           <ul>
-            <li><a href="pages/gallery.html">Gallery</a></li>
-            <li><a href="pages/full-width.html">Full Width</a></li>
-            <li><a href="pages/sidebar-left.html">Sidebar Left</a></li>
-            <li><a href="pages/sidebar-right.html">Sidebar Right</a></li>
-            <li><a href="pages/basic-grid.html">Basic Grid</a></li>
-            <li><a href="pages/font-icons.html">Font Icons</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="full-width.html">Full Width</a></li>
+            <li><a href="sidebar-left.html">Sidebar Left</a></li>
+            <li><a href="sidebar-right.html">Sidebar Right</a></li>
+            <li><a href="basic-grid.html">Basic Grid</a></li>
+            <li><a href="font-icons.html">Font Icons</a></li>
           </ul>
         </li>
         <li><a class="drop" href="#">Dropdown</a>
@@ -60,8 +60,9 @@ Licence URI: https://www.os-templates.com/template-terms
             <li><a href="#">Level 2</a></li>
           </ul>
         </li>
-        <li><a href="pages/profile.html">Profile</a></li>
-        <li class="active"><a href="pages/Rewards.html">Rewards</a></li>
+        <li><a href="profile.html">Profile</a></li>
+        <li><a href="report.html">Report</a></li>
+        <li><a href="#">Link Text</a></li>
         <li><a href="#">Link Text</a></li>
         <li><a href="#">Long Link Text</a></li>
       </ul>
@@ -71,46 +72,39 @@ Licence URI: https://www.os-templates.com/template-terms
   <!-- ################################################################################################ -->
   <!-- ################################################################################################ -->
   <!-- ################################################################################################ -->
-  <div id="pageintro" class="hoc clear">
+  <div id="thanks" class="hoc clear">
     <!-- ################################################################################################ -->
-      <div class="card">
-          <div class="container">
-            <img src="../images/demo/TeamTown.png" alt="Avatar" style="width:320px; height:360px; border-radius: 7px;  padding-bottom: 5px;">
-            <h4 style="text-align: center"><b>Town Team</b></h4>
-            <p style="text-align: center">20% discount </p>  
-            <p style="text-align: center" >30 Points</p>
-          </div>
-      </div>
-        <div class="card">
-          <div class="container">
-            <img src="../images/demo/McDonalds.jpg" alt="Avatar" style="width:320px; height:360px; border-radius: 7px;  padding-bottom: 5px;">
-            <h4 style="text-align: center"><b>McDonalds</b></h4>
-            <p style="text-align: center">50% discount </p>  
-            <p style="text-align: center" >20 Points</p>
-          </div>
-      </div>
-        <div class="card">
-          <div class="container">
-            <img src="../images/demo/cookdoor.jpg" alt="Avatar" style="width:320px; height:360px; border-radius: 7px;  padding-bottom: 5px;">
-            <h4 style="text-align: center"><b>Cook Door</b></h4>
-            <p style="text-align: center">10% discount </p>  
-            <p style="text-align: center" >4 Points</p>
-          </div>
-      </div>
-      <div class="card">
-          <div class="container">
-            <img src="../images/demo/m&m.jpg" alt="Avatar" style="width:320px; height:360px; border-radius: 7px;  padding-bottom: 5px;">
-            <h4 style="text-align: center"><b>H&M</b></h4>
-            <p style="text-align: center">10% discount </p>  
-            <p style="text-align: center" >15 Points</p>
-          </div>
-      </div>
-            </div>
 
-      
+    <article>
+        <i class="btmspace-30 fa-6x fas fa-hands-helping" style="color: #FFB900;"></i>
+        <h6 class="heading">Thank you for your contribution to save the wildlife. <br> your submission will be reviewed and the points will be added if it's valid </h6>
+
+      </article>
+
+
     <!-- ################################################################################################ -->
   </div>
   <!-- ################################################################################################ -->
+</div>
+<!-- End Top Background Image Wrapper -->
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
 
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
